--- a/spring-boot-jdbc-app/src/main/resources/application.yml
+++ b/spring-boot-jdbc-app/src/main/resources/application.yml
@@ -15,7 +15,7 @@ datasource:
     url: jdbc:h2:mem:test
     driver-class-name: org.h2.Driver
     username: admin
-    password: p4ssw0rd
+    password: password
     h2:
       console:
         settings:
